--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>onna saha</h1>
+    <header>
+        <div class="header">
+            <div class="header-text">
+                <h1 class="title-text">The Greatest <br>
+                    show on the <br>
+                    earth</h1>
+                    <p class="details">Contrary to popular belief, Lorem Ipsum is not simply <br>
+    
+                        random text. It has roots in a piece of classical Latin literature <br>
+                        from 45 BC, making it over 2000 years old.</p>
+                       <div class="header-btn">
+                        <a href="">Watch Live <i class="fa-solid fa-arrow-right"></i></a>
+                       </div>
+            </div>
+            <div class="header-img">
+                <img src="img/Banner Image.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
