main part added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,154 @@
             </div>
         </div>
     </header>
+     <!--******************************
+              header end
+     *********************************-->
+
+     <!--******************************
+              main start
+     *********************************-->
+     <main>
+        <section>
+            <div class="container">
+                <div class="list">
+                    <div class="match-btn">
+                        <a href="match.html">Upcoming Match</a>
+                    </div>
+                    <div class="group-btn">
+                        <a href="">All Group</a>
+                    </div>
+                    <div class="blog-btn">
+                        <a href="#blog">Blog</a>
+                    </div>
+                </div>
+                <div id="blog" class="transefer">
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img"  src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="box">
+                        <img class="transefer-img" src="img/Blog Image.png" alt="">
+                        <button>Transfer</button>
+                        <h2>Transfer Live: Chlesea in talks <br>
+                            over Kimpenbe transfer</h2>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i> <span class="time">10h</span>
+                            <i class="fa-solid fa-message"></i> <span class="time">23</span>
+                            </div>
+                    </div>
+                    <div class="hide-button">
+                        <a href="">View All</a>
+                    </div>
+             </div>
+            </div>
+        </section>
+     </main>
 </body>
 </html>
