--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>World cup</title>
+    <!--------------------fontawesome---------------------->
+    <script src="https://kit.fontawesome.com/f8273d495f.js" crossorigin="anonymous"></script>
+    <!---------------------google font---------------------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Edu+VIC+WA+NT+Beginner&family=Finlandica:wght@700&family=Lato:wght@300&family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@0,100;0,300;1,300;1,700&display=swap" rel="stylesheet">
+<!-----------------------------stylesheet--------------------------->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
