--- a/match.html
+++ b/match.html
@@ -15,6 +15,109 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!--******************************
+              header start
+     *********************************-->
+     <header>
+        <div class="header">
+            <div class="header-text">
+                <h1 class="title-text">The Greatest <br>
+                    show on the <br>
+                    earth</h1>
+                    <p class="details">Contrary to popular belief, Lorem Ipsum is not simply <br>
     
+                        random text. It has roots in a piece of classical Latin literature <br>
+                        from 45 BC, making it over 2000 years old.</p>
+                       <div class="header-btn">
+                        <a href="">Watch Live <i class="fa-solid fa-arrow-right"></i></a>
+                       </div>
+            </div>
+            <div class="header-img">
+                <img src="img/Banner Image.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!--******************************
+              header end
+     *********************************-->
+      <!--******************************
+              main start
+     *********************************-->
+     <main>
+        <section>
+             <div class="container">
+                  <div class="list">
+                     <div class="match-btn highlite">
+                         <a href="">Upcoming Match</a>
+                     </div>
+                     <div class="group-btn">
+                         <a href="">All Group</a>
+                     </div>
+                     <div class="blog-btn lowlight">
+                         <a href="#blog">Blog</a>
+                     </div>
+                  </div>
+                    <div id="blog" class="play-time">
+                        <div class="match">
+                            <div class="teem">
+                                <img class="flag-1" src="img/germany Flag.png" alt="">
+                                <h5 class="VS">VS</h5>
+                                <img class="flag-2" src="img/Flag.png" alt="">
+                            </div>
+                            <h4>Germany Vs France</h4>
+                            <p>April 01, 2023, 1.00am</p>
+                        </div>
+                        <div class="match">
+                            <div class="teem">
+                                <img class="flag-1" src="img/germany Flag.png" alt="">
+                                <h5 class="VS">VS</h5>
+                                <img class="flag-2" src="img/Flag.png" alt="">
+                            </div>
+                            <h4>Germany Vs France</h4>
+                            <p>April 01, 2023, 1.00am</p>
+                        </div>
+                        <div class="match">
+                            <div class="teem">
+                                <img class="flag-1" src="img/germany Flag.png" alt="">
+                                <h5 class="VS">VS</h5>
+                                <img class="flag-2" src="img/Flag.png" alt="">
+                            </div>
+                            <h4>Germany Vs France</h4>
+                            <p>April 01, 2023, 1.00am</p>
+                        </div>
+                        <div class="match">
+                            <div class="teem">
+                                <img class="flag-1" src="img/germany Flag.png" alt="">
+                                <h5 class="VS">VS</h5>
+                                <img class="flag-2" src="img/Flag.png" alt="">
+                            </div>
+                            <h4>Germany Vs France</h4>
+                            <p>April 01, 2023, 1.00am</p>
+                        </div>
+                        <div class="match">
+                            <div class="teem">
+                                <img class="flag-1" src="img/germany Flag.png" alt="">
+                                <h5 class="VS">VS</h5>
+                                <img class="flag-2" src="img/Flag.png" alt="">
+                            </div>
+                            <h4>Germany Vs France</h4>
+                            <p>April 01, 2023, 1.00am</p>
+                        </div>
+                        <div class="match">
+                            <div class="teem">
+                                <img class="flag-1" src="img/germany Flag.png" alt="">
+                                <h5 class="VS">VS</h5>
+                                <img class="flag-2" src="img/Flag.png" alt="">
+                            </div>
+                            <h4>Germany Vs France</h4>
+                            <p>April 01, 2023, 1.00am</p>
+                        </div>
+                    </div>
+             </div>
+        </section>
+     </main>
+     <!--******************************
+              main end
+     *********************************-->
 </body>
 </html>
