--- a/match.html
+++ b/match.html
@@ -120,4 +120,28 @@
               main end
      *********************************-->
 </body>
+<!--******************************
+              footer start
+     *********************************-->
+     <footer id="footer">
+        <div class="footer-title">
+            <h1>Goal</h1>
+        </div>
+        <hr class="breack">
+        <div class="footer-text">
+            <div class="text"><a href="">Contact Us </a> </div>
+            <div class="text"><a href="">Terms of Service</a></div>
+            <div class="text"><a href="">Privacy Settings </a></div>
+            <div class="text"><a href="">Goal App </a></div>
+            <div class="text"><a href="">Goal Live</a></div>
+        </div>
+        <div class="footer-icon">
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.instagram.com/accounts/login/"><i class="fa-brands fa-instagram-square"></i></a>
+        </div>
+    </footer>
+    <!--******************************
+                 footer end
+         *********************************-->
 </html>
